# Tender-Analyser

./: .env.example  .gitignore  DEPENDENCIES.md  Dockerfile  FINAL_SUMMARY.md  INSTALLATION_VERIFICATION.md  LICENSE  Makefile  README.md  SECURITY_ADVISORY.md  SETUP_VERIFICATION.md  Summarizationcode.py  check_installation.py  coverage.xml  docker-compose.yml  packages.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  verify_dependencies.py
.github/workflows/: ci.yml
data/: .gitkeep
docs/: README.md
logs/: .gitkeep
src/tender_analyser/: __init__.py  analyser.py  cli.py  extractor.py  utils.py
tests/: __init__.py  test_analyser.py  test_extractor.py  test_utils.py
